# Warehouse-Robotics

./: .dockerignore  .gitignore  CURRICULUM_DESIGN.md  CURRICULUM_FIX.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PPO_IMPROVEMENTS.md  QUICK_START_CURRICULUM.md  README.md  README_DOCKER.md  SORTING_NODE_GUIDE.md  STAGE2_FIX.md  STAGE3_TRAINING_GUIDE.md  TRAINING_FIXES.md  TRAINING_SETUP.md  TWO_PHASE_TRAINING.md  docker-compose.yml  launch_level1.sh  launch_level2.sh  launch_level3.sh  launch_warehouse.sh  launch_warehouse_empty.sh  package.xml  readme_nav2.md  run_docker.sh  setup.py
config/: nav2_params.yaml  slam_params.yaml
gazebo_models/blue_box/: model.sdf
launch/: slam_launch.py  warehouse_with_objects.launch.py
maps/: warehouse_map.pgm  warehouse_map.yaml  warehouse_map_20251204_113438.pgm  warehouse_map_20251204_113438.yaml  warehouse_map_final.pgm  warehouse_map_final.yaml
ppo_runs/: README.md  episode_metrics.csv
ppo_runs/PPO_1/: events.out.tfevents.1764621096.server.8556.0
ppo_runs/PPO_2/: events.out.tfevents.1764719068.server.39282.0
ppo_runs/PPO_3/: events.out.tfevents.1764776255.server.307966.0  events.out.tfevents.1764902327.server.7173.0  (+1 more)
src/color_docking/: color_docking_node.py  (+3 more)
src/warehouse_sim/: package.xml  setup.py
src/warehouse_sim/launch/: nav2_bringup.launch.py  warehouse_with_objects.launch.py
src/warehouse_sim/warehouse_sim/: __init__.py  warehouse_spawner.py
src/warehouse_sim/worlds/: warehouse_empty.world  warehouse_stage1.world  warehouse_stage2.world
warehouse_sim/: custom_warehouse.py
worlds/: warehouse_empty.world
(+28 files in other folders)
